v12.0.0
- Integrate Watchlist and RandomItems into one widget service