@@ -7,6 +7,7 @@
         <setting label="32002" type="bool" id="randomitems_enable" default="true"/>
         <setting label="32003" type="bool" id="randomitems_unplayed" subsetting="true" default="true" enable="eq(-1,true)"/>
         <setting label="32005" type="bool" id="randomitems_seasonfolders" subsetting="true" default="true" enable="eq(-2,true)"/>
-        <setting label="32004" type="slider" id="randomitems_time" subsetting="true" enable="eq(-3,true)" default="1" range="10,10,60"  option="int"/>
+        <setting label="32008" type="enum" id="randomitems_method" subsetting="true" enable="eq(-3,true)" default="0" lvalues="32006|32007" />
+        <setting label="32004" type="slider" id="randomitems_time" subsetting="true" enable="eq(-1,0)" default="10" range="5,5,60"  option="int"/>
     </category>
 </settings>
